SetUrlValues ignore nil; return MustJson