@@ -1,1 +1,3 @@
 SetUrlValues ignore nil; return MustJson
+fix ghttp Proxy
+add ghttp SetClient
